[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/barrel.png" type="Texture" id=1]
[ext_resource path="res://entity/barrel.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 28.5 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 600, 0 )
initial_velocity = 210.53
orbit_velocity = 0.1
orbit_velocity_random = 0.0
scale = 4.0
color = Color( 1, 0.431373, 0.121569, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[node name="barrel" type="RigidBody2D"]
mass = 4.0
gravity_scale = 4.0
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Fire" type="Particles2D" parent="."]
position = Vector2( 0, -23 )
emitting = false
amount = 20
lifetime = 0.2
local_coords = false
process_material = SubResource( 2 )

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 7
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
shape = SubResource( 3 )

[node name="TimerKill" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Explosion" to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="TimerKill" to="." method="_on_TimerKill_timeout"]
